Added blockchain functionalities

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,7 +12,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="{{url_for('get_ticket')}}">Dodaj mandat</a>
+            <a class="nav-link" href="{{url_for('fill_ticket')}}">Dodaj mandat</a>
           </li>
         </ul>
       </div>
