--- a/templates/ticket.html
+++ b/templates/ticket.html
@@ -10,20 +10,6 @@
     </div>
 
 {% endfor %}
-
-{%if pesel %}
-    <h1> Dane dotyczące mandatu dla osoby o zaszyfrowanym peselu {{pesel}} dodane </h1><br/><br/>
-
-    <table class="table table-hover table-danger">
-        {% for mandat in tickets%}
-        <tr>
-        <td>{{mandat.id}}. {{mandat.name}} - {{mandat.surname}} - {{mandat.pesel}} - {{mandat.badge}} - {{mandat.amount}} - {{mandat.pen_points}}  </br></td>
-        </tr>
-        {% endfor %}
-    </table>
-
-{%else%}
-
     <h1> Wpisz dane </h1><br/><br/>
     </br>
     </br>
@@ -73,5 +59,7 @@
         </tr>
         {% endfor %}
     </table>
-{%endif%}
+    {% for block in blocks %}
+    <p> Hash bloku: {{block.hash}}, poprzedni blok: {{block.previous_hash}}, data: {{block.date_added}} - {{block.proof}} </p>
+    {% endfor %}
 {% endblock %}
