Added login functionality

--- a/templates/all_tickets.html
+++ b/templates/all_tickets.html
@@ -10,47 +10,7 @@
     </div>
 
 {% endfor %}
-    <h1> Wpisz dane </h1><br/><br/>
-    </br>
-    </br>
-    <div class="shadow p-3 mb-5 bg-body rounded">
-    <form method="POST">
-        {{ form.hidden_tag() }}
-
-        {{ form.name.label(class="form-label") }}
-        </br>
-        {{ form.name(class="form-text") }}
-        </br>
-
-        {{ form.surname.label(class="form-label") }}
-        </br>
-        {{ form.surname(class="form-text") }}
-        </br>
-
-        {{ form.pesel.label(class="form-label") }}
-        </br>
-        {{ form.pesel(class="form-text") }}
-        </br>
-
-        {{ form.badge.label(class="form-label") }}
-        </br>
-        {{ form.badge(class="form-text") }}
-        </br>
-
-        {{ form.amount.label(class="form-label") }}
-        </br>
-        {{ form.amount(class="form-text") }}
-        </br>
-
-        {{ form.pen_points.label(class="form-label") }}
-        </br>
-        {{ form.pen_points(class="form-text") }}
-        </br>
-
-        </br>
-        {{ form.submit(class="btn btn-secondary") }}
-    </form>
-    </div>
+    <h1> Zawartość blockchain </h1><br/><br/>
     </br>
     <table class="table table-striped">
         <thead>
