--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,16 @@
 
 {% block content %}
 
+{% for message in get_flashed_messages() %}
+
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        {{ message }}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+
+{% endfor %}
+
+
     <h1> Witamy na stronie głównej systemu mandatowego. </h1>
 
     <p> Jest to niezwykle bezpieczne narzędzie, oparte na technologii blockchain.</p>
