--- a/templates/hash.html
+++ b/templates/hash.html
@@ -1,3 +1,5 @@
+<!--This is the 'hash' page-->
+
 {% extends 'base.html'%}
 
 {% block content %}
@@ -10,7 +12,7 @@
     </div>
 
 {% endfor %}
-
+<!--If the form is filled then print the hash and give user the opportunity to find information about hashed numbers in databases-->
 {%if hash %}
     <h1> Hashowanie </h1>
 
