--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,3 +1,5 @@
+<!--This file creates the navbar visible at the top of the screen-->
+
 <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="{{url_for('index')}}">Strona główna</a>
