--- a/templates/register.html
+++ b/templates/register.html
@@ -1,3 +1,5 @@
+<!--This is the registration page-->
+
 {% extends 'base.html'%}
 
 {% block content %}
@@ -10,7 +12,6 @@
     </div>
 
 {% endfor %}
-
 
     <h2> Formularz rejestracji</h2>
     <br/>
