--- a/templates/details_badge.html
+++ b/templates/details_badge.html
@@ -1,3 +1,5 @@
+<!--This site prints the detailed data for a given badge number hash-->
+
 {% extends 'base.html'%}
 
 {% block content %}
@@ -10,6 +12,7 @@
     </div>
 
 {% endfor %}
+<!--Check whether the badge number is in database-->
 {% if badge %}
     <h2> Dane szczegółowe dla policjanta o odznace {{badge}} </h2><br/><br/>
     <table class="table table-striped">
