--- a/templates/details_pesel.html
+++ b/templates/details_pesel.html
@@ -1,3 +1,5 @@
+<!--This site prints the detailed data for a given PESEL number hash-->
+
 {% extends 'base.html'%}
 
 {% block content %}
@@ -11,6 +13,7 @@
 
 {% endfor %}
 
+<!--Check whether the PESEL number is in database-->
 {% if pesel %}
 
     <h2> Dane szczegółowe dla osoby o PESELu {{pesel}} </h2><br/><br/>
