--- a/templates/base.html
+++ b/templates/base.html
@@ -21,4 +21,11 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
+
+  <footer class="text-center text-lg-start bg-light text-muted">
+
+    <div class="navbar fixed-bottom" style="background-color: rgba(0, 0, 0, 0.05);">
+      © 2022-2023 Autorzy: Jan Jarosz, Mateusz Kacprowicz, Wojciech Sobczuk
+    </div>
+  </footer>
 </html>
