--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!--This page creates main bootstrap framework extended to other pages-->
 
 <!doctype html>
-<html lang="en">
+<html lang="en" class="h-100">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,20 +12,20 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
-  <body>
+  <body class="d-flex flex-column h-100">
     {% include 'navbar.html' %}
-    </br>
     <div class = "container">
         {% block content%}
         {% endblock %}
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
+    <footer class="footer mt-auto py-3 bg-light">
+      <div class="container">
+        <span>
+          <p>© 2022-2023 Authors: Jan Jarosz, Mateusz Kacprowicz, Wojciech Sobczuk. This work is licensed under <a href="http://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">Attribution 4.0 International<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1"></a></p>
+        </span>
+      </div>
+    </footer>
   </body>
-
-  <footer class="text-center text-lg-start bg-light text-muted">
-
-    <div class="navbar fixed-bottom" style="background-color: rgba(0, 0, 0, 0.05);">
-      © 2022-2023 Autorzy: Jan Jarosz, Mateusz Kacprowicz, Wojciech Sobczuk
-    </div>
-  </footer>
 </html>
