--- a/templates/ticket.html
+++ b/templates/ticket.html
@@ -66,7 +66,11 @@
         {% for block in blocks %}
           <tr>
             <td><a href="{{url_for('get_data', hash = block.hash)}}">{{block.hash}}</a></td>
-            <td><a href="{{url_for('get_data', hash = block.previous_hash)}}">{{block.previous_hash}}</a></td>
+            {% if block.previous_hash == '0' %}
+              <td>{{block.previous_hash}}</td>
+            {% else %}
+              <td><a href="{{url_for('get_data', hash = block.previous_hash)}}">{{block.previous_hash}}</a></td>
+            {% endif %}
             <td>{{block.date_added}}</td>
           </tr>
           {% endfor %}
