--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,8 @@
 {% endfor %}
 
 
-    <h1> Witamy na stronie głównej systemu mandatowego. </h1>
+    <h1> Welcome on the home page of the ticket system! </h1>
 
-    <p> Jest to niezwykle bezpieczne narzędzie, oparte na technologii blockchain.</p>
+    <p> It is a pretty safe tool based on the blockchain technology.</p>
 
 {% endblock %}
