--- a/templates/ticket.html
+++ b/templates/ticket.html
@@ -12,7 +12,7 @@
     </div>
 
 {% endfor %}
-    <h1> Wpisz dane </h1><br/><br/>
+    <h1> Enter the data </h1><br/><br/>
     </br>
     </br>
     <div class="shadow p-3 mb-5 bg-body rounded">
@@ -57,9 +57,9 @@
     <table class="table table-striped">
         <thead>
           <tr>
-            <th scope="col">Hash bloku</th>
-            <th scope="col">Hash poprzedniego bloku</th>
-            <th scope="col">Data dodania bloku do łańcucha</th>
+            <th scope="col">Block's hash</th>
+            <th scope="col">Previous block's hash</th>
+            <th scope="col">The date when block was added to the chain</th>
           </tr>
         </thead>
         <tbody>
