--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
 
 {% endfor %}
 
-    <h1> Zaloguj się </h1><br/><br/>
+    <h1> Log in </h1><br/><br/>
     
     <div class="shadow p-3 mb-5 bg-body rounded">
     <form method="POST">
