--- a/templates/register.html
+++ b/templates/register.html
@@ -13,7 +13,7 @@
 
 {% endfor %}
 
-    <h2> Formularz rejestracji</h2>
+    <h2> Registration form</h2>
     <br/>
     <div class="shadow p-3 mb-5 bg-body rounded">
     <form method="POST">
