--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,9 @@
 {% endfor %}
 
 
-    <h1> Welcome on the home page of the ticket system! </h1>
+    <h1> Welcome on the main page of the ticketing system based on blockchain network </h1>
+    <p> Blockchain is a revolutionary approach to databases. It can be compared to a book of transactions shared on a secure network. Its security stems from the fact that all data has its own unique and immutable identificator that cannot be changed after sending the data. Any changes in this identificator will mean that the network has been compromised. That means that every unwanted changes to the data will be detected. </p>
+    <p> This ticketing service operates on a blockchain network. The character of data used in this application makes handling the data in blockchain a sensible choice. Blockchain makes this service very hard to crack and accessible from every device connected to the Internet. The app itself is hosted by state-of-the-art cloud provider. All sensitive data is encrypted and stored as hashes, only select group of people has access to the tools that allows to filter data by those hashes. In order to fully experience its capabilities, user must create an account. After logging in, the user can create a new ticket or peek into database and filter it according to their needs. </p>
 
-    <p> It is a pretty safe tool based on the blockchain technology.</p>
 
 {% endblock %}
