General update of code, update of README

--- a/templates/404.html
+++ b/templates/404.html
@@ -5,7 +5,7 @@
 {% block content %}
     <br/>
     <center>
-    <h1> Błąd 404 </h1>
-    <p> Zły URL </p>
+    <h1> Error 404 </h1>
+    <p> Wrong URL </p>
     </center>
 {% endblock %}
