--- a/templates/all_tickets.html
+++ b/templates/all_tickets.html
@@ -12,14 +12,14 @@
     </div>
 
 {% endfor %}
-    <h1> Zawartość blockchain </h1><br/><br/>
+    <h1> Content of the blockchain </h1><br/><br/>
     </br>
     <table class="table table-striped">
         <thead>
           <tr>
-            <th scope="col">Hash bloku</th>
-            <th scope="col">Hash poprzedniego bloku</th>
-            <th scope="col">Data dodania bloku do łańcucha</th>
+            <th scope="col">Hashcode of the block</th>
+            <th scope="col">Hashcode of previous block</th>
+            <th scope="col">Date of block addition to the blockchain</th>
           </tr>
         </thead>
         <tbody>
