--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>System mandatowy</title>
+    <title>Ticketing system</title>
 
     <!--Mój css-->
     <link href="{{ url_for('static', filename='css/style.css')}}" rel="stylesheet">
